@@ -26,18 +26,28 @@
 
 ;;; Code:
 
-;; (defadvice ruby-indent-command (around ruby-indent-or-complete activate)
-;;   "Complete if point is at the end of a word; otherwise, indent
-;; line."
-;;   (interactive)
-;;   (unless
-;;       (when snippet (snippet-next-field))
-;;     (if (looking-at "\\>")
-;;         (hippie-expand nil)
-;;       ad-do-it)))
-
 (eval-when-compile
   (require 'inf-ruby))
+
+;; setup align for ruby-mode
+(require 'align)
+
+(defconst align-ruby-modes '(ruby-mode)
+  "align-perl-modes is a variable defined in `align.el'.")
+
+(defconst ruby-align-rules-list
+  '(ruby-comma-delimiter
+    (regexp . ",\\(\\s-*\\)[^/ \t\n]")
+    (modes  . align-ruby-modes)
+    (repeat . t))
+  "Alignment rules specific to the ruby mode.
+See the variable `align-rules-list' for more details.")
+
+(add-to-list 'align-perl-modes 'ruby-mode)
+(add-to-list 'align-dq-string-modes 'ruby-mode)
+(add-to-list 'align-sq-string-modes 'ruby-mode)
+(add-to-list 'align-open-comment-modes 'ruby-mode)
+(add-to-list 'align-rules-list ruby-align-rules-list)
 
 (defun ruby-newline-and-indent ()
   (interactive)
